--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
         android:layout_width="0dp"
         android:layout_height="56dp"
         android:layout_marginBottom="2dp"
+        android:onClick="onClick"
         android:text="Cad Usuario"
         app:layout_constraintBottom_toTopOf="@+id/guideline3"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -64,14 +65,14 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="0dp"
-        android:layout_height="397dp"
+        android:layout_width="wrap_content"
+        android:layout_height="377dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/zegotinha"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="parent"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        tools:layout_constraintRight_creator="1" />
 
     <Button
         android:id="@+id/buttonLocais"
@@ -95,13 +96,12 @@
         android:layout_height="55dp"
         android:layout_marginEnd="3dp"
         android:layout_marginStart="2dp"
-        android:layout_marginTop="-9dp"
+        android:onClick="onClick"
         android:text="IMC"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/buttonLocais"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/buttonLembrete"
-        tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintTop_creator="1" />
@@ -123,8 +123,7 @@
         android:layout_marginBottom="5dp"
         app:layout_constraintLeft_toLeftOf="@+id/buttonCadastro"
         app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintHorizontal_bias="0.0"
-        tools:layout_editor_absoluteY="457dp" />
+        app:layout_constraintHorizontal_bias="0.0" />
 
     <Button
         android:id="@+id/buttonLembrete"
@@ -132,7 +131,7 @@
         android:layout_height="56dp"
         android:layout_marginBottom="6dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="12dp"
+        android:layout_marginRight="16dp"
         android:text="LEMBRETE"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/buttonImc"
