--- a/app/src/main/res/layout/activity_hospita_list.xml
+++ b/app/src/main/res/layout/activity_hospita_list.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.neri.alexa.cartaovacina.ListaVacinaActivity">
+    tools:context="com.neri.alexa.cartaovacina.HospitaListActivity">
 
     <ListView
-        android:id="@+id/lista"
+        android:id="@+id/listaHospital"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
