--- a/app/src/main/res/layout/activity_lista_usuario.xml
+++ b/app/src/main/res/layout/activity_lista_usuario.xml
@@ -7,8 +7,9 @@
     tools:context="com.neri.alexa.cartaovacina.ListaUsuarioActivity">
 
     <ListView
+        android:id="@+id/listVIewUsuario"
         android:layout_width="344dp"
         android:layout_height="495dp"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp" />
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp" />
 </android.support.constraint.ConstraintLayout>
