--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,141 +4,157 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.neri.alexa.cartaovacina.MainActivity"
+    tools:context="com.neri.alexa.cartaovacina.Main2Activity"
     tools:layout_editor_absoluteY="81dp"
     tools:layout_editor_absoluteX="0dp">
 
     <Button
-        android:id="@+id/buttonVac"
+        android:id="@+id/buttonVacina"
         style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="122dp"
-        android:layout_height="55dp"
+        android:layout_width="120dp"
+        android:layout_height="59dp"
         android:onClick="onClick"
         android:text="Vacina"
-        app:layout_constraintBaseline_toBaselineOf="@+id/buttonCadastro"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:textStyle="bold"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="@+id/buttonCartao"
+        app:layout_constraintBaseline_toBaselineOf="@+id/buttonLocais"
         tools:layout_constraintBaseline_creator="1"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1" />
+        app:layout_constraintLeft_toRightOf="@+id/buttonCartao" />
 
     <Button
-        android:id="@+id/buttonCadastro"
+        android:id="@+id/buttonCadastroUsusario"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="0dp"
-        android:layout_height="56dp"
-        android:layout_marginBottom="2dp"
+        android:layout_height="0dp"
         android:onClick="onClick"
         android:text="Cad Usuario"
-        app:layout_constraintBottom_toTopOf="@+id/guideline3"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/buttonVac"
+        android:textStyle="bold"
+        app:layout_constraintRight_toLeftOf="@+id/buttonVacina"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toTopOf="@+id/buttonCartao"
+        android:layout_marginEnd="3dp"
+        android:layout_marginTop="1dp"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1" />
+        android:layout_marginBottom="1dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/buttonVacina" />
+
+    <Button
+        android:id="@+id/buttonLocais"
+        android:layout_width="118dp"
+        android:layout_height="0dp"
+        android:onClick="onClick"
+        android:text="Locais"
+        android:textStyle="bold"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toTopOf="@+id/buttonImc"
+        android:layout_marginStart="54dp"
+        android:layout_marginEnd="53dp"
+        app:layout_constraintRight_toRightOf="@+id/imageView3"
+        android:layout_marginTop="4dp"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/buttonImc" />
+
+    <Button
+        android:id="@+id/buttonImc"
+        android:layout_width="174dp"
+        android:layout_height="0dp"
+        android:onClick="onClick"
+        android:text="IMC"
+        android:textStyle="bold"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        android:layout_marginStart="187dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="1dp"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline4" />
+
+    <Button
+        android:id="@+id/buttonCartao"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:onClick="onClick"
+        android:text="Cartao"
+        android:textStyle="bold"
+        app:layout_constraintRight_toLeftOf="@+id/buttonImc"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="3dp"
+        app:layout_constraintTop_toBottomOf="@+id/buttonVacina"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/guideline"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.67"
+        app:layout_constraintGuide_percent="0.34"
         tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="241dp" />
+        tools:layout_editor_absoluteX="122dp" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/guideline2"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.33"
+        app:layout_constraintGuide_percent="0.66"
         tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="119dp" />
+        tools:layout_editor_absoluteX="238dp" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/guideline3"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="180dp" />
+
+    <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/guideline4"
         android:orientation="horizontal"
-        app:layout_constraintGuide_end="60dp"
-        tools:layout_editor_absoluteY="451dp"
+        app:layout_constraintGuide_percent="0.9"
+        tools:layout_editor_absoluteY="460dp"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/guideline6"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.79"
+        tools:layout_editor_absoluteY="404dp"
         tools:layout_editor_absoluteX="0dp" />
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="visible"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/imageView3"
+        android:layout_width="379dp"
+        android:layout_height="366dp"
         app:srcCompat="@drawable/zegotinha"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginTop="-62dp"
-        app:layout_constraintHorizontal_bias="0.0" />
-
-    <Button
-        android:id="@+id/buttonLocais"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="3dp"
-        android:layout_marginStart="4dp"
-        android:onClick="onClick"
-        android:text="Locais"
-        app:layout_constraintBottom_toBottomOf="@+id/buttonVac"
-        app:layout_constraintLeft_toRightOf="@+id/buttonVac"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/buttonVac"
-        tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1" />
-
-    <Button
-        android:id="@+id/buttonImc"
-        android:layout_width="0dp"
-        android:layout_height="55dp"
-        android:layout_marginEnd="3dp"
-        android:layout_marginStart="2dp"
-        android:onClick="onClick"
-        android:text="IMC"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="@+id/buttonLocais"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/buttonLembrete"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:text="Button"
+        app:layout_constraintBottom_toTopOf="@+id/guideline6"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintVertical_bias="1.0"
         tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="@+id/buttonCadastro"
-        app:layout_constraintTop_toBottomOf="@+id/buttonVac"
         tools:layout_constraintLeft_creator="1"
         android:layout_marginBottom="5dp"
-        app:layout_constraintLeft_toLeftOf="@+id/buttonCadastro"
-        app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintHorizontal_bias="0.0" />
-
-    <Button
-        android:id="@+id/buttonLembrete"
-        android:layout_width="109dp"
-        android:layout_height="56dp"
-        android:layout_marginBottom="6dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:text="LEMBRETE"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/buttonImc"
-        tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintRight_creator="1" />
+        app:layout_constraintLeft_toLeftOf="@+id/buttonCadastroUsusario"
+        android:layout_marginLeft="-96dp"
+        tools:layout_editor_absoluteX="33dp" />
 
 </android.support.constraint.ConstraintLayout>
