--- a/app/src/main/res/layout/hospital.xml
+++ b/app/src/main/res/layout/hospital.xml
@@ -14,24 +14,28 @@
             android:layout_width="220dp"
             android:layout_height="32dp"
             android:text="TextView"
-            tools:layout_constraintTop_creator="1"
-            tools:layout_constraintRight_creator="1"
+            android:textSize="14sp"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/nomeHospital"
             tools:layout_constraintLeft_creator="1"
-            app:layout_constraintLeft_toLeftOf="parent" />
+            tools:layout_constraintRight_creator="1"
+            tools:layout_constraintTop_creator="1"
+            android:layout_marginTop="0dp"
+            app:layout_constraintHorizontal_bias="1.0" />
 
         <TextView
             android:id="@+id/nomeHospital"
             android:layout_width="222dp"
             android:layout_height="56dp"
-            android:text="TextView"
-            tools:layout_constraintTop_creator="1"
+            android:layout_marginLeft="32dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="25dp"
-            tools:layout_constraintLeft_creator="1"
+            android:text="TextView"
+            android:textSize="24sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginLeft="32dp" />
+            tools:layout_constraintLeft_creator="1"
+            tools:layout_constraintTop_creator="1" />
     </android.support.constraint.ConstraintLayout>
 </LinearLayout>
