--- a/app/src/main/res/layout/usuario.xml
+++ b/app/src/main/res/layout/usuario.xml
@@ -10,29 +10,17 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/textView"
-            android:layout_width="185dp"
-            android:layout_height="51dp"
-            android:text="TextView"
-            tools:layout_constraintTop_creator="1"
+            android:id="@+id/textViewNomeUsario"
+            android:layout_width="329dp"
+            android:layout_height="44dp"
             android:layout_marginStart="13dp"
+            android:text="TextView"
+            android:textSize="24sp"
+            android:textStyle="bold"
             tools:layout_constraintLeft_creator="1"
-            app:layout_constraintTop_toTopOf="@+id/imageButton"
-            app:layout_constraintLeft_toRightOf="@+id/imageButton"
-            android:layout_marginLeft="42dp"
-            android:layout_marginTop="-10dp" />
-
-        <ImageButton
-            android:id="@+id/imageButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@android:drawable/alert_dark_frame"
             tools:layout_constraintTop_creator="1"
-            android:layout_marginStart="27dp"
-            android:layout_marginTop="26dp"
-            tools:layout_constraintLeft_creator="1"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginLeft="29dp" />
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="16dp" />
+
     </android.support.constraint.ConstraintLayout>
 </LinearLayout>
