--- a/app/src/main/res/layout/activity_descricao_hospital.xml
+++ b/app/src/main/res/layout/activity_descricao_hospital.xml
@@ -8,58 +8,74 @@
 
     <TextView
         android:id="@+id/desHospital"
-        android:layout_width="120dp"
-        android:layout_height="0dp"
-        android:text="TextView"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/textViewDescFone"
+        android:layout_width="281dp"
+        android:layout_height="66dp"
+        android:layout_marginBottom="14dp"
+        android:layout_marginLeft="40dp"
         android:layout_marginStart="47dp"
         android:layout_marginTop="2dp"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="14dp"
+        android:text="TextView"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/textViewDescFone"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <TextView
         android:id="@+id/textViewDescFone"
-        android:layout_width="0dp"
-        android:layout_height="32dp"
+        android:layout_width="170dp"
+        android:layout_height="34dp"
+        android:layout_marginTop="118dp"
+        android:contentDescription="@android:string/defaultVoiceMailAlphaTag"
         android:text="TextView"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="@+id/desHospital"
-        android:layout_marginTop="48dp"
-        tools:layout_constraintLeft_creator="1"
+        android:textColor="@color/colorPrimary"
+        android:textSize="18sp"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="@+id/desHospital"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintRight_toRightOf="@+id/desHospital"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_editor_absoluteX="151dp"
+        tools:layout_editor_absoluteY="123dp" />
 
     <TextView
         android:id="@+id/textViewDesBairro"
-        android:layout_width="0dp"
-        android:layout_height="42dp"
-        android:text="TextView"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/textViewDesendereco"
-        android:layout_marginEnd="4dp"
-        app:layout_constraintRight_toRightOf="@+id/textViewDesendereco"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/textViewDescFone"
-        tools:layout_constraintLeft_creator="1"
+        android:layout_width="303dp"
+        android:layout_height="52dp"
         android:layout_marginBottom="20dp"
-        app:layout_constraintLeft_toLeftOf="@+id/textViewDescFone" />
+        android:layout_marginEnd="4dp"
+        android:layout_marginTop="16dp"
+        android:text="TextView"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/textViewDesendereco"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_toLeftOf="@+id/textViewDescFone"
+        app:layout_constraintRight_toRightOf="@+id/textViewDesendereco"
+        app:layout_constraintTop_toBottomOf="@+id/textViewDescFone"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <TextView
         android:id="@+id/textViewDesendereco"
-        android:layout_width="112dp"
-        android:layout_height="35dp"
-        android:text="TextView"
-        tools:layout_constraintTop_creator="1"
+        android:layout_width="311dp"
+        android:layout_height="60dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginStart="47dp"
-        android:layout_marginTop="158dp"
-        tools:layout_constraintLeft_creator="1"
+        android:layout_marginTop="265dp"
+        android:text="TextView"
+        android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_editor_absoluteX="51dp" />
+
 </android.support.constraint.ConstraintLayout>
