--- a/app/src/main/res/layout/activity_imc.xml
+++ b/app/src/main/res/layout/activity_imc.xml
@@ -4,23 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.neri.alexa.cartaovacina.ImcActivity">
-
-    <EditText
-        android:id="@+id/editTextPeso"
-        android:layout_width="0dp"
-        android:layout_height="41dp"
-        android:ems="10"
-        android:inputType="number"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="18dp"
-        app:layout_constraintRight_toRightOf="@+id/editTextAlrura"
-        android:layout_marginTop="68dp"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    tools:context="com.neri.alexa.cartaovacina.ImcActivity"
+    tools:layout_editor_absoluteY="81dp"
+    tools:layout_editor_absoluteX="0dp">
 
     <TextView
         android:id="@+id/textView2"
@@ -29,11 +15,12 @@
         android:text="Peso"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintBottom_creator="1"
+        android:layout_marginStart="16dp"
         app:layout_constraintBottom_toBottomOf="@+id/editTextPeso"
-        android:layout_marginTop="37dp"
+        android:layout_marginTop="29dp"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="41dp"
-        app:layout_constraintLeft_toLeftOf="@+id/editTextPeso"
+        android:layout_marginBottom="43dp"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -43,12 +30,11 @@
         android:text="Altura"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintBottom_creator="1"
-        android:layout_marginStart="16dp"
-        app:layout_constraintBottom_toBottomOf="@+id/editTextAlrura"
-        android:layout_marginTop="54dp"
+        app:layout_constraintBottom_toBottomOf="@+id/editTextAltura"
+        android:layout_marginTop="43dp"
         tools:layout_constraintLeft_creator="1"
         android:layout_marginBottom="43dp"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toLeftOf="@+id/editTextPeso"
         app:layout_constraintTop_toTopOf="@+id/editTextPeso" />
 
     <Button
@@ -56,38 +42,74 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Resultado"
+        tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/editTextResultado"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="32dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginEnd="1dp"
+        app:layout_constraintRight_toRightOf="@+id/editTextAltura"
+        android:layout_marginTop="14dp"
+        app:layout_constraintTop_toBottomOf="@+id/editTextAltura" />
 
-    <EditText
+    <TextView
         android:id="@+id/editTextResultado"
+        android:layout_width="194dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="17dp"
+        android:textSize="18sp"
+        app:layout_constraintLeft_toLeftOf="@+id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintTop_creator="1" />
+
+    <TextView
+        android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
-        tools:layout_constraintBottom_creator="1"
-        android:layout_marginStart="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Resultado:"
+        android:textSize="18sp"
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginStart="29dp"
+        android:layout_marginTop="29dp"
+        app:layout_constraintTop_toBottomOf="@+id/buttonResultado"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="148dp"
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <EditText
-        android:id="@+id/editTextAlrura"
+        android:id="@+id/editTextPeso"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="numberDecimal"
         tools:layout_constraintTop_creator="1"
-        android:layout_marginTop="41dp"
+        android:layout_marginTop="60dp"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/textView2"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextAltura"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="numberDecimal"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="@+id/editTextPeso"
+        android:layout_marginTop="28dp"
         app:layout_constraintTop_toBottomOf="@+id/editTextPeso"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/textView3" />
+        app:layout_constraintLeft_toLeftOf="@+id/editTextPeso" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="196dp"
+        android:layout_height="47dp"
+        android:layout_marginTop="15dp"
+        android:textColor="@android:color/holo_red_dark"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="@+id/editTextResultado"
+        app:layout_constraintTop_toBottomOf="@+id/editTextResultado"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
 </android.support.constraint.ConstraintLayout>
