--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,7 +60,9 @@
         android:layout_marginTop="4dp"
         app:layout_constraintTop_toBottomOf="@+id/imageView3"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/buttonImc" />
+        app:layout_constraintLeft_toLeftOf="@+id/buttonImc"
+        app:layout_constraintHorizontal_bias="0.666"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/buttonImc"
@@ -142,19 +144,18 @@
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="379dp"
-        android:layout_height="366dp"
+        android:layout_width="407dp"
+        android:layout_height="403dp"
         app:srcCompat="@drawable/zegotinha"
         app:layout_constraintBottom_toTopOf="@+id/guideline6"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintVertical_bias="0.0"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
         android:layout_marginBottom="5dp"
         app:layout_constraintLeft_toLeftOf="@+id/buttonCadastroUsusario"
-        android:layout_marginLeft="-96dp"
-        tools:layout_editor_absoluteX="33dp" />
+        android:layout_marginLeft="-23dp" />
 
 </android.support.constraint.ConstraintLayout>
