--- a/app/src/main/res/layout/vacina.xml
+++ b/app/src/main/res/layout/vacina.xml
@@ -13,8 +13,8 @@
 
         <TextView
             android:id="@+id/idade"
-            android:layout_width="185dp"
-            android:layout_height="31dp"
+            android:layout_width="176dp"
+            android:layout_height="24dp"
             android:text="TextView"
             android:textSize="18sp"
             android:textStyle="italic"
@@ -23,26 +23,28 @@
             tools:layout_constraintRight_creator="1"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="1dp"
-            app:layout_constraintTop_toBottomOf="@+id/nomeVacina" />
+            android:layout_marginTop="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/nomeVacina"
+            android:layout_marginRight="16dp"
+            tools:layout_editor_absoluteX="168dp" />
 
         <TextView
             android:id="@+id/nomeVacina"
-            android:layout_width="0dp"
-            android:layout_height="38dp"
+            android:layout_width="324dp"
+            android:layout_height="35dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="3dp"
             android:layout_weight="0.06"
             android:text="TextView"
-            android:textSize="30sp"
+            android:textSize="18sp"
             android:textStyle="bold"
-            tools:layout_constraintTop_creator="1"
-            tools:layout_constraintRight_creator="1"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="16dp"
-            tools:layout_constraintLeft_creator="1"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_constraintLeft_creator="1"
+            tools:layout_constraintRight_creator="1"
+            tools:layout_constraintTop_creator="1" />
     </android.support.constraint.ConstraintLayout>
 
 </LinearLayout>
