--- a/app/src/main/res/layout/activity_adicionar_vacinas.xml
+++ b/app/src/main/res/layout/activity_adicionar_vacinas.xml
@@ -8,19 +8,32 @@
 
     <EditText
         android:id="@+id/editTextVacinaAdd"
-        android:layout_width="339dp"
+        android:layout_width="0dp"
         android:layout_height="50dp"
+        android:layout_marginBottom="53dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="54dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="54dp" />
+        app:layout_constraintBottom_toTopOf="@+id/ADDvaciana"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <Button
         android:id="@+id/ADDvaciana"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="168dp" />
+        android:layout_width="181dp"
+        android:layout_height="48dp"
+        android:text="Adicionar Vacina"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        android:layout_marginEnd="77dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="157dp"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
